<resources>
    <string name="app_name">Быстрый Банкрот</string>
    <string name="Header">Выберите способ проверки</string>
    <string name="OborAct">Оборотные активы</string>
    <string name="VneObActiv">Внеобороные Активы</string>
    <string name="intangible_assets">Нематериальные активы</string>
    <string name="recearch_dev">Рез. исследований</string>
    <string name="Osnovn_sredstva">Основные средства</string>
    <string name="doxod_vlosh_v_mat_chen">Доходы вл. в мат. ценности</string>
    <string name="otlosh_nal_ob">Отложенные нал-ые активы</string>
    <string name="proch_vneob_active">Прочие внеоборотные активы</string>
    <string name="itog_po_pervomu">Итог по первому разделу</string>
    <string name="oborotn_active">Оборотные активы</string>
    <string name="zanasi">Запасы</string>
    <string name="nds_no_preobr">НДС по преобр. ценностям</string>
    <string name="deb_zadolsh">Дебиторска задолженость</string>
    <string name="fin_vlosh">Финансовые вложения</string>
    <string name="den_sredstva">Ден. стредства и эквиваленты</string>
    <string name="prochie_ob_active">Прочие оборотные активы</string>
    <string name="itog_po_vtoromu">Итог по второму разделу</string>
    <string name="continuue">Заполнить следующий период</string>
    <string name="tW2">Заполните второй период</string>
    <string name="gotovo1">Готово</string>
    <string name="udov">Структура баланса удовлетворительная. Коэффициент утраты платежеспособности имеет значение: </string>
    <string name="neudov">Структура баланса неудовлетворительная. Коэффициент восстановления платежеспособности имеет значение: </string>
    <string name="teklikvid">Коэффициент текущей ликвидности = </string>
    <string name="sovCapitlal">Рентабельность совокупного капитала = </string>
    <string name="finIndepen">Коэффциент финансовой независимости = </string>
    <string name="obespec">Коэффициент обеспеченности собственными средствами</string>
    <string name="DolgorsOb">Долгосрочные обяз-ва</string>
    <string name="BalansPrib">Балансовая прибыль</string>
    <string name="ProdazhPrib">Прибыль от продаж</string>
    <string name="KratkosOb">Краткосрочные обяз-ва</string>
    <string name="Viruchka">Выручка (Нетто)</string>
    <string name="ZnachKoefP">Это значение больше 1.0, следовательно компания имеет реальную возможность не утратить плетежеспособность в течение ближайших 3х месяцев.</string>
    <string name="ZnachKoefM">Это значение меньше 1.0, следовательно компания имеет реальную возможность утратить плетежеспособность в течение ближайших 3х месяцев.</string>
    <string name="ZnachKoefVostP">Это значение больше 1.0, следовательно компания имеет реальную возможность восстановить плетежеспособность в течение ближайших 6и месяцев.</string>
    <string name="ZnachKoefVostM">Это значение меньше 1.0, следовательно компания не имеет реальной возможности восстановить плетежеспособность в течение ближайших 6и месяцев.</string>
    <string name="indAltamanaZnach">Индекс Альтмана = </string>
    <string name="Spok2Year">Банкротство не грозит в течение 2 лет.</string>
    <string name="Spok2YearNiz">Хотя остается низкая возможность банкротства.</string>
    <string name="Spok2YearSuperNiz">Хотя остается крайне низкая возможность банкротства.</string>
    <string name="UnSpok2Year">Грозит банкротство в течение 2 лет.</string>
    <string name="UnSpok2YearVis">Вероятность банкротства при этом высокая</string>
    <string name="UnSpok2YearSuperVis">Вероятность банкротства при этом крайне высокая</string>
    <string name="TafTish">Значение модель Таффлера-Тишоу = </string>
    <string name="bolshe03">Укомпании неплохие долгосрочные перспективы.</string>
    <string name="menshe02">Банкроство вероятно.</string>
    <string name="between">Продолжайте работать дальше.</string>
    <string name="ModelLisa">Значение модель Лиса = </string>
    <string name="ModelDavBel">Значение модель Давыдово-Беликова = </string>
    <string name="integralZatrati">Интегральные затраты</string>
    <string name="DavBelMax">Вероятность банкротства максимальная</string>
    <string name="DavBelHigh">Вероятность банкротства высокая</string>
    <string name="DavBelMid">Вероятность банкротства средняя</string>
    <string name="DavBelLov">Вероятность банкротства низкая</string>
    <string name="DavBelLovest">Минимальная вероятность банкротства</string>
    <string name="BallSovCapit">Полученно баллов за рентабельность совокупного капитала = </string>
    <string name="BallTekLik">Полученно баллов за коэф. текущий ликвидности = </string>
    <string name="BallFinNez">Полученно баллов за коэф. финансовой независимости = </string>
    <string name="category">класс.</string>
</resources>
