<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground">
    <include android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Индекс Альтмана"
        android:id="@+id/tW2"
        android:layout_gravity="center_horizontal"
        android:gravity="center" />Double.parseDouble

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:measureWithLargestChild="false">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/VneObActiv"
                    android:id="@+id/intangible_assets" />

                <EditText
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|text|numberSigned|numberDecimal"
                    android:ems="10"
                    android:id="@+id/ETVneoborotrAct"
                    android:layout_column="1"
                    android:editable="true"
                    style="@style/Base.Widget.AppCompat.EditText" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/OborAct"
                    android:id="@+id/recearch_dev" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="number|text|numberSigned|numberDecimal"
                    android:ems="10"
                    android:id="@+id/ETOborotAct"
                    android:layout_column="1"
                    android:editable="true"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Капитал и резервы"
                    android:id="@+id/osnovn_sredstva" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="number|text|numberSigned|numberDecimal"
                    android:ems="10"
                    android:id="@+id/ETCapital"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/DolgorsOb"
                    android:id="@+id/intangible_assets" />

                <EditText
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|text|numberSigned|numberDecimal"
                    android:ems="10"
                    android:id="@+id/ETDolgosrochOb"
                    android:layout_column="1"
                    android:editable="true" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/KratkosOb"
                    android:id="@+id/kratkosrObyaj" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="number|text|numberSigned|numberDecimal"
                    android:ems="10"
                    android:id="@+id/ETCratcosrOb"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/Viruchka"
                    android:id="@+id/osnovn_sredstva" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="number|text|numberSigned|numberDecimal"
                    android:ems="10"
                    android:id="@+id/ETViruchka"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Нераспред. прибыль"
                    android:id="@+id/recearch_dev" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="number|text|numberSigned|numberDecimal"
                    android:ems="10"
                    android:id="@+id/ETBalancePribil"
                    android:layout_column="1"
                    android:editable="true"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Чистая прибыль"
                    android:id="@+id/osnovn_sredstva" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="number|text|numberSigned|numberDecimal"
                    android:ems="10"
                    android:id="@+id/ETChistay"
                    android:layout_column="1" />
            </TableRow>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gotovo1"
                android:id="@+id/report"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/result"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible" />
        </TableLayout>

    </ScrollView>

</LinearLayout>